# tamandua-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  INTEGRATION_GUIDE.md  LICENSE-MIT  NOTICE  README.md
.github/workflows/: ci.yml
examples/: embedded_agent.rs  mobile_integration.rs
src/: config.rs  error.rs  lib.rs  types.rs
src/detection/: entropy.rs  heuristics.rs  mod.rs  yara_engine.rs
src/ffi/: android.rs  ios.rs  mod.rs
src/p2p/: connection.rs  ice.rs  mod.rs  stun.rs  turn.rs  wireguard.rs
src/platform/: android.rs  ios.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/process/: mod.rs
src/response/: mod.rs  quarantine.rs
src/telemetry/: batch.rs  collector.rs  mod.rs
src/transport/: client.rs  message.rs  mod.rs
tests/: integration_test.rs  p2p_tests.rs
